courses/430_programming-languages/assignment-5/tests/error/error21.sml
val prog =
  PROGRAM
    {decls=[],
     func_decls=[("f",{body=[],decls=[],params=[]}),
                 ("g",{body=[],decls=[],params=[]}),
                 ("f",{body=[],decls=[],params=[]})],stmts=[]} : program
;
